# imap-to-kindle

./: .gitignore  Dockerfile  README.md  config.example.toml  docker-compose.yml  pyproject.toml
src/kindle_email/: __main__.py  cleaner.py  config.py  epub.py  fetcher.py  notifier.py  parser.py  pipeline.py  raindrop_fetcher.py  sender.py  url_fetcher.py
tests/: conftest.py  test_cleaner.py  test_epub.py  test_parser.py  test_raindrop_fetcher.py  test_url_fetcher.py
tests/fixtures/: multipart_with_cid_image.eml  simple_newsletter.eml  ssrf_test.eml
